Fix 'Dashboard dropdown hover makes text unreadable' - #192.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -75,11 +75,6 @@ a:visited,
     text-decoration: none;
 }
 
-#adaptable-page-header-wrapper .dropdown-menu > li > a.dropdown-item,
-#adaptable-page-header-wrapper .dropdown-item a {
-    color: [[setting:navbardropdowntextcolor]];
-}
-
 a:hover,
 a:active {
     color: [[setting:linkhover]];
